style.css
body{
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #f6de26;
    font-family: 'Roboto', sans-serif;
    color: #000814;
    font-size:2em;
    font-weight:700;
    padding: 0;
    margin: 0;
}

.mainContainer{
    width: 1200px;
    height: 80vh;
    padding:10px;
}

.subContainer{
    position: absolute;
}

.flex{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    gap:20px;
}

.center{
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

.subContainer .firstPage{
    position: absolute;
    z-index: 1;
    opacity: 1;
}

.secondPage,.thirdPage,.fourthPage,.firstPage{
    opacity: 0;
    transition: all 0.5s ease;
    position: absolute;
    z-index: 0;
}


.thirdPage{
    justify-content:space-between;

}


.inline-block{
    display: inline-block;
    text-align: center;
    margin: 20px;
    font-weight: 500;
    font-size: 20px;
}

.inline-block div{
    margin-bottom: 15px;
}



.playerOption{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    font-weight: 500;
}

.optionsContainer{
    display: flex;
    justify-content: center;
    gap: 10px;
}

.textAlign{
    text-align: center;
    width: 30%;
}

.resultContainer{
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-evenly;
    
}

.rock,.paper,.scissor{
    cursor: pointer;
    border: solid 3px black;
    padding: 10px;
    border-radius: 20px;
}

.rock:hover,.paper:hover,.scissor:hover{
    border: solid 3px #e5e5e5;
}

.showingChoices{
    width: 100%;
    display: flex;
    justify-content: center;
}

.rps{
    display: inline-block;
    width: 150px;
}

button{
    padding: 15px 20px;
    cursor: pointer;
    background-color: #14213d;
    border-radius: 10px;
    border: none;
    color: #ffba08;
    font-weight: 700;
}

button:hover{
    background-color: #000000;
}

input{
    padding:10px 20px;
    border-radius: 5px;
    border: none;
}

@media(max-width:556px){
    body{
        font-size: 1.5em;
    }

    .rps{
        width: 80px;
    }



}

